--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.1.3",
+        "flowbite": "^2.3.0",
+        "flowbite-react": "^0.9.0",
         "heroicons": "^2.1.3"
     }
 }
