--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@headlessui/react": "^1.4.2",
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/dateformat": "^5.0.2",
         "@types/node": "^18.13.0",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
@@ -25,6 +26,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.1.3",
+        "dateformat": "^5.0.3",
         "flowbite": "^2.3.0",
         "flowbite-react": "^0.9.0",
         "heroicons": "^2.1.3"
