--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@heroicons/react": "^2.1.3",
         "@types/dateformat": "^5.0.2",
         "dateformat": "^5.0.3",
-        "heroicons": "^2.1.3"
+        "heroicons": "^2.1.3",
+        "use-state-with-callback": "^3.0.2"
     }
 }
