--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "dateformat": "^5.0.3",
         "flowbite": "^2.3.0",
         "flowbite-react": "^0.9.0",
-        "heroicons": "^2.1.3"
+        "heroicons": "^2.1.3",
+        "sweetalert2": "^11.11.0",
+        "sweetalert2-react-content": "^5.0.7"
     }
 }
