--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "@types/dateformat": "^5.0.2",
         "dateformat": "^5.0.3",
         "heroicons": "^2.1.3",
+        "react-currency-input-field": "^3.8.0",
+        "sweetalert2": "^11.11.1",
         "use-state-with-callback": "^3.0.2"
     }
 }
