--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.1.3",
+        "currency-formatter": "^1.5.9",
         "dateformat": "^5.0.3",
         "flowbite": "^2.3.0",
         "flowbite-react": "^0.9.0",
+        "format-currency": "^1.0.0",
         "heroicons": "^2.1.3"
     }
 }
