--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "flowbite": "^2.3.0",
         "flowbite-react": "^0.9.0",
         "heroicons": "^2.1.3",
+        "react-select": "^5.8.0",
+        "react-tailwindcss-select": "^1.8.5",
         "sweetalert2": "^11.11.0",
         "sweetalert2-react-content": "^5.0.7"
     }
