--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "flowbite-react": "^0.9.0",
         "heroicons": "^2.1.3",
         "react-select": "^5.8.0",
+        "react-spinners": "^0.14.1",
         "react-tailwindcss-select": "^1.8.5",
         "sweetalert2": "^11.11.0",
         "sweetalert2-react-content": "^5.0.7"
