--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@heroicons/react": "^2.1.3",
         "@types/dateformat": "^5.0.2",
+        "@types/react-currency-format": "^1.0.4",
         "dateformat": "^5.0.3",
         "heroicons": "^2.1.3",
         "react-currency-input-field": "^3.8.0",
