--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "flowbite": "^2.3.0",
         "flowbite-react": "^0.9.0",
         "format-currency": "^1.0.0",
-        "heroicons": "^2.1.3"
+        "heroicons": "^2.1.3",
+        "react-date-picker": "^11.0.0",
+        "react-datepicker": "^7.3.0"
     }
 }
