--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.1.3",
+        "ag-grid-react": "^32.0.2",
         "dateformat": "^5.0.3",
         "flowbite": "^2.3.0",
         "flowbite-react": "^0.9.0",
