--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.1.3",
+        "@material-tailwind/react": "^2.1.9",
         "@types/dateformat": "^5.0.2",
         "@types/react-currency-format": "^1.0.4",
         "dateformat": "^5.0.3",
         "heroicons": "^2.1.3",
+        "react-collapsible": "^2.10.0",
         "react-currency-input-field": "^3.8.0",
-        "sweetalert2": "^11.11.1",
+        "sweetalert2": "^11.6.13",
         "use-state-with-callback": "^3.0.2"
     }
 }
