--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@cyntler/react-doc-viewer": "^1.16.6",
         "@heroicons/react": "^2.1.3",
         "@material-tailwind/react": "^2.1.9",
         "@types/dateformat": "^5.0.2",
@@ -39,6 +40,7 @@
         "react-currency-input-field": "^3.8.0",
         "react-date-picker": "^11.0.0",
         "react-datepicker": "^7.3.0",
+        "react-doc-viewer": "^0.1.14",
         "react-select": "^5.8.0",
         "react-spinners": "^0.14.1",
         "react-tailwindcss-select": "^1.8.5",
