--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@headlessui/react": "^1.4.2",
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/crypto-js": "^4.2.2",
         "@types/dateformat": "^5.0.2",
         "@types/jquery": "^3.5.30",
         "@types/node": "^18.13.0",
@@ -19,8 +20,8 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^5.0"
@@ -33,6 +34,7 @@
         "ag-grid-community": "^32.0.2",
         "ag-grid-enterprise": "^32.0.2",
         "ag-grid-react": "^32.0.2",
+        "crypto-js": "^4.2.0",
         "currency-formatter": "^1.5.9",
         "dateformat": "^5.0.3",
         "flowbite": "^2.3.0",
