--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@heroicons/react": "^2.1.3",
         "@material-tailwind/react": "^2.1.9",
         "@types/dateformat": "^5.0.2",
