plugin chat haris 2

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "ag-grid-community": "^32.0.2",
         "ag-grid-enterprise": "^32.0.2",
         "ag-grid-react": "^32.0.2",
+        "autosize": "^6.0.1",
         "crypto-js": "^4.2.0",
         "currency-formatter": "^1.5.9",
         "date-fns": "^3.6.0",
