--- a/package.json
+++ b/package.json
@@ -33,6 +33,21 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@heroicons/react": "^2.1.3",
         "@material-tailwind/react": "^2.1.9",
+        "@progress/kendo-data-query": "^1.7.0",
+        "@progress/kendo-drawing": "^1.20.4",
+        "@progress/kendo-licensing": "^1.3.5",
+        "@progress/kendo-react-animation": "^8.3.0",
+        "@progress/kendo-react-buttons": "^8.3.0",
+        "@progress/kendo-react-data-tools": "^8.3.0",
+        "@progress/kendo-react-dateinputs": "^8.3.0",
+        "@progress/kendo-react-dropdowns": "^8.3.0",
+        "@progress/kendo-react-grid": "^8.3.0",
+        "@progress/kendo-react-inputs": "^8.3.0",
+        "@progress/kendo-react-intl": "^8.3.0",
+        "@progress/kendo-react-popup": "^8.3.0",
+        "@progress/kendo-react-treeview": "^8.3.0",
+        "@progress/kendo-svg-icons": "^3.1.0",
+        "@progress/kendo-theme-default": "^9.0.0",
         "@types/dateformat": "^5.0.2",
         "@types/react-currency-format": "^1.0.4",
         "ag-grid-community": "^32.0.2",
