--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,10 @@
     "version": "1.0.0",
     "type": "project",
     "description": "Phoenix ERP",
-    "keywords": ["phoenix", "erp"],
+    "keywords": [
+        "phoenix",
+        "erp"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
@@ -31,7 +34,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
