--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "doctrine/dbal": "^4.0",
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^11.0",
+        "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "realrashid/sweet-alert": "^7.1",
