--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite --host=ec2-13-213-57-51.ap-southeast-1.compute.amazonaws.com",
+        "dev": "vite",
         "build": "tsc && vite build"
     },
     "devDependencies": {
@@ -20,8 +20,10 @@
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
+        "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
+        "pusher-js": "^8.4.0-rc2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "tailwindcss": "^3.2.1",
