--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@cyntler/react-doc-viewer": "^1.16.6",
         "@heroicons/react": "^2.1.3",
         "@material-tailwind/react": "^2.1.9",
+        "@react-pdf/renderer": "^4.1.3",
         "@types/dateformat": "^5.0.2",
         "@types/react-currency-format": "^1.0.4",
         "ag-grid-community": "^32.0.2",
@@ -43,12 +44,14 @@
         "flowbite-react": "^0.9.0",
         "format-currency": "^1.0.0",
         "heroicons": "^2.1.3",
+        "jspdf": "^2.5.2",
         "react-collapsible": "^2.10.0",
         "react-currency-input-field": "^3.8.0",
         "react-date-picker": "^11.0.0",
         "react-datepicker": "^7.3.0",
         "react-doc-viewer": "^0.1.14",
         "react-loader-spinner": "^6.1.6",
+        "react-pdf": "^9.1.1",
         "react-select": "^5.8.0",
         "react-spinners": "^0.14.1",
         "react-tailwindcss-select": "^1.8.5",
