--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "format-currency": "^1.0.0",
         "heroicons": "^2.1.3",
         "jspdf": "^2.5.2",
+        "lodash": "^4.17.21",
         "react-collapsible": "^2.10.0",
         "react-currency-input-field": "^3.8.0",
         "react-date-picker": "^11.0.0",
