--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "flowbite": "^2.3.0",
         "flowbite-react": "^0.9.0",
         "format-currency": "^1.0.0",
+        "framer-motion": "^12.4.2",
         "heroicons": "^2.1.3",
         "jspdf": "^2.5.2",
         "lodash": "^4.17.21",
